--- a/ASP.NET-MVC/BookShop/BookShop.AcceptanceTests/BookShop.AcceptanceTests.csproj
+++ b/ASP.NET-MVC/BookShop/BookShop.AcceptanceTests/BookShop.AcceptanceTests.csproj
@@ -23,10 +23,15 @@
     <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="85.0.4183.8700" />
     <PackageReference Include="Selenium.WebDriver.MicrosoftDriver" Version="17.17134.0" />
     <PackageReference Include="SpecFlow.Plus.LivingDocPlugin" Version="*" />
-    <PackageReference Include="SpecRun.SpecFlow" Version="*" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.8" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.8" />
     <PackageReference Include="Moq" Version="4.14.6" />
+    <PackageReference Include="SpecFlow.xUnit" Version="3.9.8" />
+    <PackageReference Include="xunit" Version="2.4.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
 
   </ItemGroup>
 
@@ -46,6 +51,9 @@
     </None>
     <None Update="Wireframes\ShoppingCart.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="xunit.runner.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
